# Deposito

./: CMakeLists.txt
C/: ft_print_comb.c  ft_print_comb2.c  ft_print_numbers.c  ft_print_numbers2.c  ft_print_reverse_alphabet.c  ft_print_reverse_alphabet2.c  ft_putchar2.c  ft_putnbr.c  ft_str_is_alpha.c  ft_str_is_lowercase.c  ft_str_is_numeric.c  ft_str_is_printable.c  ft_strcpy.c  ft_strlen.c  ft_strncpy.c  ft_strupcase.c
C/C00/ex00/: ft_putchar.c
C/C00/ex01/: ft_print_alphabet.c  ft_print_alphabet2.c
C/C00/ex07/: ft_putnbr.c
Core/ExamFunctions/: AllFunctions.c  Fazendolvl1.c  a.out  eufazendotudo.c  functions_list.md
Core/Libft/: CMakeLists.txt  Makefile  NAOCOMPLETO_ft_memset.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_strchr.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_tolower.c  ft_toupper.c  libft.h
Core/fract-ol/: Makefile  events.c  fractol  fractol.h  init.c  main.c  math_utils.c  render.c  string_utils.c  teste.c
Core/libft/: Makefile  ft_isprint.c  ft_lstclear_bonus.c  ft_lstsize_bonus.c  ft_memcpy.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strlcat.c  ft_strlcpy.c  ft_strtrim.c  libft.h
Core/minitalk/: Makefile  client.c  minitalk.h  server  server.c
Hacking/: babushka.tar  chall  cipher.txt  cipherbeep.txt  file  flag  id_ctf_ed25519
Hacking/babushka/: encoded.txt
Rush/Rush00/: a.out  explication rush.c  ft_putchar.c  main.c  rush_03.c
(+231 files in other folders)
